UtahLiveDataTest/src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>TotalSubCriteriaBScore__c</fullName>
        <formula>VALUE( TEXT(SubCriteriaquestion3__c)) + VALUE( TEXT(SubCriteriaQuestion4__c))

/*VALUE( TEXT(SubCriteriaBQuestion1__c)) + VALUE( TEXT(SubCriteriaBQuestion2__c)) + VALUE( TEXT(SubCriteriaBQuestion3__c)) + VALUE( TEXT(SubCriteriaBQuestion4__c)) + VALUE( TEXT(SubCriteriaBQuestion5__c))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sub-Criteria B Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSubCriteriaCScore__c</fullName>
        <formula>VALUE( TEXT(SubCriteriaQuestion5__c)) + VALUE( TEXT(SubCriteriaQuestion6__c)) 
/*VALUE( TEXT(SubCriteriaCQuestion1__c)) + VALUE( TEXT(SubCriteriaCQuestion2__c)) + VALUE( TEXT(SubCriteriaCQuestion3__c)) + VALUE( TEXT(SubCriteriaCQuestion4__c))+ VALUE( TEXT(SubCriteriaCQuestion5__c))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sub-Criteria C Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSubCriteriaDScore__c</fullName>
        <formula>VALUE( TEXT(SubCriteriaquestion7__c)) + VALUE( TEXT(SubCriteriaQuestion8__c)) 

/*VALUE( TEXT(SubCriteriaDQuestion1__c)) + VALUE( TEXT(SubCriteriaDQuestion2__c)) + VALUE( TEXT(SubCriteriaDQuestion3__c)) + VALUE( TEXT(SubCriteriaDQuestion4__c)) + VALUE( TEXT(SubCriteriaDQuestion5__c))*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sub-Criteria D Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSubCriteriaScore__c</fullName>
        <label>Total Sub-Criteria Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weaknesses1__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Weaknesses2__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Weaknesses3__c</fullName>
        <label>Weaknesses</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>WeightedRatingValue__c</fullName>
        <label>Weighted Rating Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preDecisionSiteVisitComments__c</fullName>
        <label>pre-Decision Site Visit Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>renderStatus__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Review Completed&apos;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>renderStatus</label>
        <type>Checkbox</type>
    </fields>
    <label>Review</label>
    <nameField>
        <label>Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>SharetoAnnouncementReviewerAndApprover__c</fullName>
        <label>Share to Announcement Reviewer and Appro</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>SharetoPanelExecutiveUser__c</fullName>
        <label>Share to Panel Executive User</label>
    </sharingReasons>
    <validationRules>
        <fullName>Requested_and_Recommended_Amount</fullName>
        <active>false</active>
        <description>Recommended Amount cannot be more than Requested Amount and less than Award Floor Amount.</description>
        <errorConditionFormula>RecommendedBudget__c &gt; Application__r.Announcement__r.AwardCeiling__c</errorConditionFormula>
        <errorMessage>Recommended Amount cannot be more than Requested Amount and less than Award Floor Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_cant_be_greater_than_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>ReviewStartDate__c &gt;  ReviewEndDate__c</errorConditionFormula>
        <errorMessage>Review Start date can not be greater than End date</errorMessage>
    </validationRules>
</CustomObject>